--- a/RPiMonUWP/RPiMonUWP.csproj
+++ b/RPiMonUWP/RPiMonUWP.csproj
@@ -105,7 +105,6 @@
     <Compile Include="ObjectModels\ManagementObjects\Sysinfo\Cpu\CpuCurrentSpeed.cs" />
     <Compile Include="ObjectModels\ManagementObjects\Sysinfo\Cpu\CpuFlags.cs" />
     <Compile Include="ObjectModels\ManagementObjects\Sysinfo\Cpu\CpuTemparature.cs" />
-    <Compile Include="ObjectModels\ManagementObjects\Sysinfo\Docker\Dockers.cs" />
     <Compile Include="ObjectModels\ManagementObjects\Sysinfo\FileSystem\FsSize.cs" />
     <Compile Include="ObjectModels\ManagementObjects\Sysinfo\IO\DiskIo.cs" />
     <Compile Include="ObjectModels\ManagementObjects\Sysinfo\Memory\Memory.cs" />
@@ -118,6 +117,7 @@
     <Compile Include="ObjectModels\ManagementObjects\Sysinfo\Services\Service.cs" />
     <Compile Include="ObjectModels\ManagementObjects\Sysinfo\System\SystemInformation.cs" />
     <Compile Include="ObjectModels\ManagementObjects\Sysinfo\User\SystemUser.cs" />
+    <Compile Include="ObjectModels\ReferenceOjects\LoginObject.cs" />
     <Compile Include="ObjectModels\ReferenceOjects\UserModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Controls\PivotHeader.xaml.cs">
@@ -126,6 +126,8 @@
     <Compile Include="UI\Pages\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\SysInfoViewModel.cs" />
+    <Compile Include="ViewModels\UserManagementViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -166,7 +168,6 @@
   <ItemGroup>
     <Folder Include="Commons\" />
     <Folder Include="UI\Frames\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
