--- a/RPiMonUWP/project.json
+++ b/RPiMonUWP/project.json
@@ -1,5 +1,7 @@
 ﻿{
   "dependencies": {
+    "LiveCharts.Uwp": "0.8.0",
+    "MahApps.Metro.IconPacks.Material": "1.9.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Newtonsoft.Json": "10.0.2",
     "SocketIoClientDotNet": "0.9.13"
